[package]
name = "lemming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow={ version = "1", features = ["backtrace"] }
clap={ version = "4", features = ["derive"] }
rayon="1"
tree-sitter="0.20"
walkdir="2"

[build-dependencies]
cc="*"
